# mlsgpt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-mlsgpt-action.yml
assets/: privacy.html
mlsgpt/: api.py  apiv2.py  auth.py  cache.py  cmd.py  constants.py  core.py  ingress.py  log.py  logger.py  models.py  store.py  tasks.py
mlsgpt/db/: models.py  reader.py  schema.py
mlsgpt/dbv2/: filters.py  models.py  schema.py  store.py
notebooks/: add_embeddings_1.ipynb  add_embeddings_2.ipynb  add_h3_indexes.ipynb  add_h3_indexes_to_db.ipynb  add_property_summaries.ipynb  add_property_summaries_llama.ipynb  calc_proximity_h3.ipynb  eda_rsbr_data.ipynb  eda_rsbr_data_2.ipynb  explore_sqlalchemy.ipynb  find_closest_property.ipynb  mv_rsbr_data.ipynb  summary_system_prompt.md  test.ipynb  test_extract.ipynb  test_read.ipynb  test_write.ipynb  view_h3_indexes.ipynb
scripts/: create_cert.sh
sql/: add_embedding_table.sql  add_fk_constraint.sql  add_h3.sql  add_indexes.sql  add_pks.sql  add_stats_tables.sql  add_stats_tables_2.sql  add_users.sql  select_data.sql
