[tool.poetry]
name = "mlsgpt"
version = "0.1.0"
description = ""
authors = ["Kwesi P Apponsah <kwesiparry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
ruff = "^0.3.7"
black = {version = "^24.4.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
