[tool.poetry]
name = "mlsgpt"
version = "0.1.0"
description = ""
authors = ["Kwesi P Apponsah <kwesiparry@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mlsgpt = "mlsgpt.cmd:cli"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
ngrok = "^1.2.0"
pymupdf = "^1.24.1"
python-dotenv = "^1.0.1"
click = "^8.1.7"
httpx = "^0.27.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
ruff = "^0.3.7"
black = {version = "^24.4.0", allow-prereleases = true}
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
